--- a/compose-dev.yaml
+++ b/compose-dev.yaml
@@ -3,7 +3,7 @@ services:
     entrypoint:
     - sleep
     - infinity
-    image: docker/dev-environments-default:stable-1
+    image: debian:stable-slim
     init: true
     volumes:
     - type: bind
